name:                RomanNumerals
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/RomanNumerals#readme
license:             BSD3
license-file:        LICENSE
author:              Yan Frimmel
maintainer:          yanfrimmel1411@gmail.com
copyright:           2018 Yan Frimmel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Converter.Converter
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable RomanNumerals
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , RomanNumerals
  default-language:    Haskell2010

test-suite RomanNumerals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , RomanNumerals
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/RomanNumerals
